samples/_failures_safe/1761356702_99b176_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e2eb53ab.c: In function ‘main’:
./samples/SAFE/__tmp_e2eb53ab.c:146:5: error: ‘graph’ undeclared (first use in this function); did you mean ‘Graph’?
  146 |     graph
      |     ^~~~~
      |     Graph
./samples/SAFE/__tmp_e2eb53ab.c:146:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_e2eb53ab.c:146:10: error: expected ‘;’ at end of input
  146 |     graph
      |          ^
      |          ;
./samples/SAFE/__tmp_e2eb53ab.c:146:5: error: expected declaration or statement at end of input
  146 |     graph
      |     ^~~~~
